Bump drools from 5.6.0.Final to 8.39.0.Final